fixed issue with horizontal scroll

--- a/main.css
+++ b/main.css
@@ -560,8 +560,7 @@ header img {
 .footer__container {
 	display: flex;
 	align-items: center;
-	width: 1170px;
-	margin: auto;
+	width: 100%;
 	justify-content: space-between;
 }
 
